kube-infra/kustomize/service-mesh/linkerd/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
